[package]
name = "market-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.0"